# boda

./: 71  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: release.yml
journal/2026-03-18/: fix_scroll_lag.md
journal/2026-04-13/: add_ctrl_u_ctrl_d_scroll.md
scripts/: test.sh  version.sh
src/: app.rs  main.rs
src/command/: manager.rs  mod.rs
src/error/: mod.rs
src/state/: action.rs  manager.rs  mod.rs  state.rs
src/termination/: manager.rs
src/ui/: manager.rs
src/util/: channel.rs  chrono.rs  log.rs  mod.rs
