[package]
name = "boda"
version = "0.2521.0"
edition = "2024"
repository = "https://github.com/BeLeap/boda"
description = "opinionated alternative watch"
license-file = "LICENSE"

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"

[dependencies]
crossbeam-channel = "0.5.15"
crossterm = "0.28.1"
clap = { version = "4.5.37", features = ["derive"] }
chrono = "0.4.40"
ratatui = "0.29.0"
color-eyre = "0.6.3"
log = { version = "0.4.27", features = ["release_max_level_info"] }
rusqlite = { version = "0.35.0", features = ["bundled"] }
ulid = "1.2.1"
